--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta http-equiv="refresh" content="8; URL='https://sites.google.com/view/estevaosaleme-research'"/>
 </head>
 <body>
-E. B. Saleme Industry Profile under construction. Check out his Github repositories at <a href="https://github.com/estevaosaleme">https://github.com/estevaosaleme</a><br /> You will be redirected to his academic profile in 8 seconds...
+E. B. Saleme Industry Profile is under construction. Meanwhile, you may check out his Github repositories at <a href="https://github.com/estevaosaleme">https://github.com/estevaosaleme</a><br /> You will be redirected to his academic profile in 8 seconds...
 </body>
 </html>
