--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>E. B. Saleme Industry Profile</title>
-    <meta http-equiv="refresh" content="8; URL='https://sites.google.com/view/estevaosaleme-research'"/>
+    <meta http-equiv="refresh" content="8; URL='https://linktr.ee/estevao.saleme'"/>
 </head>
 <body>
-E. B. Saleme Industry Profile is under construction. Meanwhile, you may check out his Github repositories at <a href="https://github.com/estevaosaleme">https://github.com/estevaosaleme</a><br /> You will be redirected to his academic profile in 8 seconds...
+E. B. Saleme Industry Profile is under construction. Meanwhile, you may check out his Github repositories at <a href="https://github.com/estevaosaleme">https://github.com/estevaosaleme</a>
+    <br /> You will be redirected to his <b>Linktree</b> in 8 seconds...
 </body>
 </html>
