--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>E. B. Saleme Industry Profile</title>
-    <meta http-equiv="refresh" content="8; URL='https://linktr.ee/estevao.saleme'"/>
+    <meta http-equiv="refresh" content="8; URL='https://linktr.ee/estevaosaleme'"/>
 </head>
 <body>
 E. B. Saleme Industry Profile is under construction. Meanwhile, you may check out his Github repositories at <a href="https://github.com/estevaosaleme">https://github.com/estevaosaleme</a>
